Fix a small layout glitch on OC caused by c661254
The ownCloud core defines some layout rules for the class "separator" which
messed up our UI a bit. Changed our own class name to "time-separator" to
avoid being affected by the core rule.

--- a/css/embedded/files-music-player.css
+++ b/css/embedded/files-music-player.css
@@ -88,9 +88,8 @@
 	box-sizing: border-box;
 }
 
-#music-controls .separator {
+#music-controls .time-separator {
 	display: inline;
-	border: none;
 }
 
 #music-controls .control {
